--- a/notification-settings.html
+++ b/notification-settings.html
@@ -147,7 +147,7 @@
 </head>
 <body>
     <div class="settings-container">
-        <a href="index.html" class="back-link">
+        <a href="dashboard.html" class="back-link">
             <i class="fas fa-arrow-left"></i>
             Back to Home
         </a>
