--- a/verify-otp.html
+++ b/verify-otp.html
@@ -512,7 +512,7 @@
             
             setTimeout(() => {
                     alert('Account verified successfully!');
-                        window.location.href = 'index.html';
+                        window.location.href = 'dashboard.html';
                     }, 2000);
             }
         });
