--- a/complaints.html
+++ b/complaints.html
@@ -173,7 +173,7 @@
          <nav class="sidebar">
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">
+                    <a href="dashboard.html" class="nav-link">
                         <i class="fas fa-home"></i>
                         <span>Home</span>
                     </a>
@@ -487,7 +487,7 @@
         <nav class="mobile-nav">
             <ul class="mobile-nav-menu">
                 <li class="mobile-nav-item">
-                    <a href="index.html" class="mobile-nav-link">
+                    <a href="dashboard.html" class="mobile-nav-link">
                         <i class="fas fa-home"></i>
                         Home
                     </a>
