--- a/login.html
+++ b/login.html
@@ -430,7 +430,7 @@
             
             if (email && password) {
                 // Simulate login success
-                window.location.href = 'index.html';
+                window.location.href = 'dashboard.html';
             } else {
                 alert('Please fill in all fields');
             }
