--- a/units.html
+++ b/units.html
@@ -435,7 +435,7 @@
         <nav class="sidebar">
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">
+                    <a href="dashboard.html" class="nav-link">
                         <i class="fas fa-home"></i>
                         <span>Home</span>
                     </a>
@@ -947,7 +947,7 @@
         <nav class="mobile-nav">
             <ul class="mobile-nav-menu">
                 <li class="mobile-nav-item">
-                    <a href="index.html" class="mobile-nav-link">
+                    <a href="dashboard.html" class="mobile-nav-link">
                         <i class="fas fa-home"></i>
                         Home
                     </a>
