--- a/profile.html
+++ b/profile.html
@@ -278,6 +278,14 @@
 
             <!-- Profile Overview Card -->
             <div class="profile-overview-card">
+                <div class="profile-floating-actions">
+                    <button class="floating-action-btn" title="Edit Profile">
+                        <i class="fas fa-edit"></i>
+                    </button>
+                    <button class="floating-action-btn" title="Change Password">
+                        <i class="fas fa-key"></i>
+                    </button>
+                </div>
                 <div class="profile-avatar-section">
                     <div class="profile-avatar">
                         <i class="fas fa-user"></i>
@@ -287,16 +295,6 @@
                         <p>Unit 802</p>
                         <span class="profile-status">Active Resident</span>
                     </div>
-                </div>
-                <div class="profile-quick-actions">
-                    <button class="quick-action-btn">
-                        <i class="fas fa-edit"></i>
-                        Edit Profile
-                    </button>
-                    <button class="quick-action-btn">
-                        <i class="fas fa-key"></i>
-                        Change Password
-                    </button>
                 </div>
             </div>
 
@@ -346,8 +344,8 @@
                         <div class="info-row">
                             <label>Email Address</label>
                             <div class="info-display">heriberto@northwindtraders.com</div>
-                        </div>
-                    </div>
+                </div>
+            </div>
                 </div>
 
                 <!-- Property Details Section -->
@@ -355,7 +353,7 @@
                     <div class="section-header">
                         <i class="fas fa-home"></i>
                         <h4>Property Details</h4>
-                    </div>
+                        </div>
                     <div class="section-content">
                         <div class="info-row">
                             <label>Unit Number</label>
@@ -373,8 +371,8 @@
                                 <option value="2" selected>2 spaces</option>
                                 <option value="3">3 spaces</option>
                             </select>
-                        </div>
-                    </div>
+                </div>
+            </div>
                 </div>
 
                 <!-- Residency Status Section -->
@@ -382,7 +380,7 @@
                     <div class="section-header">
                         <i class="fas fa-id-card"></i>
                         <h4>Residency Status</h4>
-                    </div>
+                                </div>
                     <div class="section-content">
                         <div class="status-grid">
                             <div class="status-item">
@@ -392,7 +390,7 @@
                             <div class="status-item">
                                 <label>House Member</label>
                                 <div class="status-badge false">False</div>
-                            </div>
+                        </div>
                             <div class="status-item">
                                 <label>Tenant</label>
                                 <div class="status-badge false">False</div>
@@ -416,19 +414,19 @@
                     <div class="section-header">
                         <i class="fas fa-calendar"></i>
                         <h4>Tenant Information</h4>
-                    </div>
+                                </div>
                     <div class="section-content">
                         <div class="info-row">
                             <label>Tenant Start Date</label>
                             <input type="date" value="" class="form-input">
-                        </div>
+                                </div>
                         <div class="info-row">
                             <label>Tenant End Date</label>
                             <input type="date" value="" class="form-input">
                         </div>
+                        </div>
                     </div>
-                </div>
-
+                    
                 <!-- Security Settings Section -->
                 <div class="profile-section full-width">
                     <div class="section-header">
@@ -444,11 +442,11 @@
                             <div class="info-row">
                                 <label>New Password</label>
                                 <input type="password" placeholder="Enter new password" class="form-input">
-                            </div>
+                                </div>
                             <div class="info-row">
                                 <label>Confirm Password</label>
                                 <input type="password" placeholder="Confirm new password" class="form-input">
-                            </div>
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -456,8 +454,8 @@
 
             <!-- Action Buttons -->
             <div class="profile-actions-bar">
-                <button type="button" class="btn btn-primary btn-large">
-                    <i class="fas fa-save"></i>
+                        <button type="button" class="btn btn-primary btn-large">
+                            <i class="fas fa-save"></i>
                     Save All Changes
                 </button>
                 <button type="button" class="btn btn-secondary">
