update Dollar sign

--- a/dashboard.html
+++ b/dashboard.html
@@ -168,7 +168,7 @@
                                 <strong>Payment Reminder</strong>
                             </div>
                             <div class="notification-preview">
-                                Your monthly payment of $1,250 is due on March 15th
+                                Your monthly payment of ₱1,250 is due on March 15th
                             </div>
                             <div class="notification-time">2 hours ago</div>
                         </div>
@@ -242,7 +242,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="services.html" class="nav-link">
-                        <i class="fas fa-concierge-bell"></i>
+                        <i class="fa fa-calendar"></i>
                         <span>Book Services/Facilities</span>
                     </a>
                 </li>
@@ -275,7 +275,7 @@
                     <div class="stat-icon">
                         <i class="fas fa-dollar-sign"></i>
                     </div>
-                    <span class="stat-value">$1,250</span>
+                    <span class="stat-value">₱1,250</span>
                     <span class="stat-label">Amount Due</span>
                 </div>
                 <div class="stat-card">
@@ -318,7 +318,7 @@
                                 <div class="activity-date">March 1, 2024</div>
                             </div>
                             <div style="color: var(--secondary); font-weight: 600; font-size: 1rem;">
-                                $1,250
+                                ₱1,250
                             </div>
                         </div>
                         <div class="activity-item">
@@ -418,7 +418,7 @@
                 </li>
                 <li class="mobile-nav-item">
                     <a href="services.html" class="mobile-nav-link">
-                        <i class="fas fa-concierge-bell"></i>
+                        <i class="fa fa-calendar"></i>
                         Services
                     </a>
                 </li>
