--- a/profile.html
+++ b/profile.html
@@ -182,7 +182,7 @@
                                 <strong>Payment Reminder</strong>
                             </div>
                             <div class="notification-preview">
-                                Your monthly payment of $1,250 is due on March 15th
+                                Your monthly payment of ₱1,250 is due on March 15th
                             </div>
                             <div class="notification-time">2 hours ago</div>
                         </div>
@@ -249,7 +249,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="services.html" class="nav-link">
-                        <i class="fas fa-concierge-bell"></i>
+                        <i class="fa fa-calendar"></i>
                         <span>Book Services/Facilities</span>
                     </a>
                 </li>
@@ -494,7 +494,7 @@
                 </li>
                 <li class="mobile-nav-item">
                     <a href="services.html" class="mobile-nav-link">
-                        <i class="fas fa-concierge-bell"></i>
+                        <i class="fa fa-calendar"></i>
                         Services
                     </a>
                 </li>
