--- a/units.html
+++ b/units.html
@@ -460,7 +460,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="services.html" class="nav-link">
-                        <i class="fas fa-concierge-bell"></i>
+                        <i class="fa fa-calendar"></i>
                         <span>Book Services/Facilities</span>
                     </a>
                 </li>
@@ -598,7 +598,7 @@
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Property Value</span>
-                                <span class="detail-value">$320,000</span>
+                                <span class="detail-value">₱320,000</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Insurance Policy</span>
@@ -614,23 +614,23 @@
                             </h3>
                             <div class="detail-item">
                                 <span class="detail-label">Association Dues</span>
-                                <span class="detail-value">$145</span>
+                                <span class="detail-value">₱145</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Maintenance Fee</span>
-                                <span class="detail-value">$55</span>
+                                <span class="detail-value">₱55</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Parking Fee</span>
-                                <span class="detail-value">$35</span>
+                                <span class="detail-value">₱35</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Utilities</span>
-                                <span class="detail-value">$65</span>
+                                <span class="detail-value">₱65</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Total Monthly</span>
-                                <span class="detail-value">$300</span>
+                                <span class="detail-value">₱300</span>
                             </div>
                         </div>
                     </div>
@@ -751,11 +751,11 @@
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Monthly Rent</span>
-                                <span class="detail-value">$1,200</span>
+                                <span class="detail-value">₱1,200</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Security Deposit</span>
-                                <span class="detail-value">$2,400</span>
+                                <span class="detail-value">₱2,400</span>
                             </div>
                         </div>
 
@@ -767,23 +767,23 @@
                             </h3>
                             <div class="detail-item">
                                 <span class="detail-label">Association Dues</span>
-                                <span class="detail-value">$185</span>
+                                <span class="detail-value">₱185</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Maintenance Fee</span>
-                                <span class="detail-value">$75</span>
+                                <span class="detail-value">₱75</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Parking Fee</span>
-                                <span class="detail-value">$45</span>
+                                <span class="detail-value">₱45</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Property Tax</span>
-                                <span class="detail-value">$95</span>
+                                <span class="detail-value">₱95</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Total Monthly</span>
-                                <span class="detail-value">$400</span>
+                                <span class="detail-value">₱400</span>
                             </div>
                         </div>
                     </div>
@@ -825,7 +825,7 @@
                         <div class="maintenance-meta">
                             <span>Completed: March 20, 2024</span>
                             <span>Technician: Mike Rodriguez</span>
-                            <span>Cost: $285</span>
+                            <span>Cost: ₱285</span>
                         </div>
                     </div>
                     <div class="maintenance-status status-completed">Completed</div>
@@ -841,7 +841,7 @@
                         <div class="maintenance-meta">
                             <span>Scheduled: March 25, 2024</span>
                             <span>Technician: Lisa Chen</span>
-                            <span>Estimated Cost: $150</span>
+                            <span>Estimated Cost: ₱150</span>
                         </div>
                     </div>
                     <div class="maintenance-status status-pending">Pending</div>
@@ -857,7 +857,7 @@
                         <div class="maintenance-meta">
                             <span>Started: March 22, 2024</span>
                             <span>Technician: David Kim</span>
-                            <span>Cost: $195</span>
+                            <span>Cost: ₱195</span>
                         </div>
                     </div>
                     <div class="maintenance-status status-in-progress">In Progress</div>
@@ -873,7 +873,7 @@
                         <div class="maintenance-meta">
                             <span>Completed: February 15, 2024</span>
                             <span>Technician: Alex Thompson</span>
-                            <span>Cost: $125</span>
+                            <span>Cost: ₱125</span>
                         </div>
                     </div>
                     <div class="maintenance-status status-completed">Completed</div>
@@ -972,7 +972,7 @@
                 </li>
                 <li class="mobile-nav-item">
                     <a href="services.html" class="mobile-nav-link">
-                        <i class="fas fa-concierge-bell"></i>
+                        <i class="fa fa-calendar"></i>
                         Services
                     </a>
                 </li>
