--- a/vehicles.html
+++ b/vehicles.html
@@ -709,7 +709,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="services.html" class="nav-link">
-                        <i class="fas fa-concierge-bell"></i>
+                        <i class="fa fa-calendar"></i>
                         <span>Book Services/Facilities</span>
                     </a>
                 </li>
@@ -815,7 +815,7 @@
                         <div class="stat-label">Expiring Soon</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-value">$95</div>
+                        <div class="stat-value">₱95</div>
                         <div class="stat-label">Monthly Fees</div>
                     </div>
                 </div>
@@ -875,7 +875,7 @@
                                 </div>
                                 <div class="permit-item">
                                     <span>Monthly Fee:</span>
-                                    <span>$45</span>
+                                    <span>₱45</span>
                                 </div>
                             </div>
                         </div>
@@ -944,7 +944,7 @@
                                 </div>
                                 <div class="permit-item">
                                     <span>Monthly Fee:</span>
-                                    <span>$50</span>
+                                    <span>₱50</span>
                                 </div>
                             </div>
                         </div>
@@ -1013,7 +1013,7 @@
                                 </div>
                                 <div class="permit-item">
                                     <span>Daily Fee:</span>
-                                    <span>$5</span>
+                                    <span>₱5</span>
                                 </div>
                             </div>
                         </div>
@@ -1129,7 +1129,7 @@
                 </li>
                 <li class="mobile-nav-item">
                     <a href="services.html" class="mobile-nav-link">
-                        <i class="fas fa-concierge-bell"></i>
+                        <i class="fa fa-calendar"></i>
                         Services
                     </a>
                 </li>
@@ -1230,9 +1230,9 @@
                         <label class="form-label">Parking Area Preference</label>
                         <select class="form-input" required>
                             <option value="">Select parking area</option>
-                            <option value="covered">Covered Parking ($50/month)</option>
-                            <option value="open">Open Parking ($35/month)</option>
-                            <option value="visitor">Visitor Parking ($25/month)</option>
+                                                            <option value="covered">Covered Parking (₱50/month)</option>
+                                <option value="open">Open Parking (₱35/month)</option>
+                                <option value="visitor">Visitor Parking (₱25/month)</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -1280,8 +1280,8 @@
                         <select class="form-input" required>
                             <option value="">Select sticker type</option>
                             <option value="resident">Resident Sticker (Free)</option>
-                            <option value="visitor">Visitor Sticker ($5)</option>
-                            <option value="commercial">Commercial Sticker ($15)</option>
+                                                            <option value="visitor">Visitor Sticker (₱5)</option>
+                                <option value="commercial">Commercial Sticker (₱15)</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -1338,9 +1338,9 @@
                         <label class="form-label">Duration</label>
                         <select class="form-input" required>
                             <option value="">Select duration</option>
-                            <option value="day">Day Pass ($5)</option>
-                            <option value="week">Week Pass ($25)</option>
-                            <option value="month">Monthly Pass ($100)</option>
+                                                            <option value="day">Day Pass (₱5)</option>
+                                <option value="week">Week Pass (₱25)</option>
+                                <option value="month">Monthly Pass (₱100)</option>
                         </select>
                     </div>
                     <div class="form-group">
