--- a/properties.html
+++ b/properties.html
@@ -691,7 +691,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="services.html" class="nav-link">
-                        <i class="fas fa-concierge-bell"></i>
+                        <i class="fa fa-calendar"></i>
                         <span>Book Services/Facilities</span>
                     </a>
                 </li>
@@ -809,7 +809,7 @@
                         <i class="fas fa-dollar-sign"></i>
                     </div>
                     <div class="quick-stat-content">
-                        <div class="quick-stat-value">$450</div>
+                        <div class="quick-stat-value">₱450</div>
                         <div class="quick-stat-label">Monthly Dues</div>
                     </div>
                 </div>
@@ -1083,7 +1083,7 @@
                 </li>
                 <li class="mobile-nav-item">
                     <a href="services.html" class="mobile-nav-link">
-                        <i class="fas fa-concierge-bell"></i>
+                        <i class="fa fa-calendar"></i>
                         Services
                     </a>
                 </li>
