--- a/services.html
+++ b/services.html
@@ -1006,7 +1006,7 @@
                                 <strong>Payment Reminder</strong>
                             </div>
                             <div class="notification-preview">
-                                Your monthly payment of $1,250 is due on March 15th
+                                Your monthly payment of ₱1,250 is due on March 15th
                             </div>
                             <div class="notification-time">2 hours ago</div>
                         </div>
@@ -1080,7 +1080,7 @@
                 </li>
                 <li class="nav-item active">
                     <a href="services.html" class="nav-link">
-                        <i class="fas fa-concierge-bell"></i>
+                        <i class="fa fa-calendar"></i>
                         <span>Book Services/Facilities</span>
                     </a>
                 </li>
@@ -1110,7 +1110,7 @@
             <!-- Service Type Toggle -->
             <div style="display: flex; gap: 1rem; margin-bottom: 2rem;">
                 <button id="servicesTab" class="tab-btn active" onclick="showServices()">
-                    <i class="fas fa-concierge-bell"></i>
+                    <i class="fa fa-calendar"></i>
                     Professional Services
                 </button>
                 <button id="facilitiesTab" class="tab-btn" onclick="showFacilities()">
@@ -1132,7 +1132,7 @@
                 <div class="service-content">
                     <div class="service-title">Deep Cleaning Service</div>
                     <div class="service-description">Professional deep cleaning for your entire unit including kitchen, bathrooms, living areas, and bedrooms.</div>
-                    <div class="service-price">$150 - $250</div>
+                                                <div class="service-price">₱150 - ₱250</div>
                     <div class="service-duration">
                         <i class="fas fa-clock"></i>
                         <span>3-5 hours</span>
@@ -1149,7 +1149,7 @@
                 <div class="service-content">
                     <div class="service-title">Plumbing Services</div>
                     <div class="service-description">Fix leaks, unclog drains, repair faucets, and handle all your plumbing needs with certified professionals.</div>
-                    <div class="service-price">$80 - $300</div>
+                                                <div class="service-price">₱80 - ₱300</div>
                     <div class="service-duration">
                         <i class="fas fa-clock"></i>
                         <span>1-3 hours</span>
@@ -1166,7 +1166,7 @@
                 <div class="service-content">
                     <div class="service-title">Electrical Services</div>
                     <div class="service-description">Licensed electricians for outlet installation, lighting repairs, circuit breaker fixes, and electrical inspections.</div>
-                    <div class="service-price">$100 - $400</div>
+                                                <div class="service-price">₱100 - ₱400</div>
                     <div class="service-duration">
                         <i class="fas fa-clock"></i>
                         <span>1-4 hours</span>
@@ -1183,7 +1183,7 @@
                 <div class="service-content">
                     <div class="service-title">HVAC Maintenance</div>
                     <div class="service-description">Air conditioning and heating system maintenance, filter replacement, and climate control optimization.</div>
-                    <div class="service-price">$120 - $350</div>
+                                                <div class="service-price">₱120 - ₱350</div>
                     <div class="service-duration">
                         <i class="fas fa-clock"></i>
                         <span>2-4 hours</span>
@@ -1200,7 +1200,7 @@
                 <div class="service-content">
                     <div class="service-title">Appliance Repair</div>
                     <div class="service-description">Repair and maintenance for refrigerators, washers, dryers, ovens, and other household appliances.</div>
-                    <div class="service-price">$90 - $280</div>
+                                                <div class="service-price">₱90 - ₱280</div>
                     <div class="service-duration">
                         <i class="fas fa-clock"></i>
                         <span>1-3 hours</span>
@@ -1217,7 +1217,7 @@
                 <div class="service-content">
                     <div class="service-title">Pest Control</div>
                     <div class="service-description">Safe and effective pest control solutions for ants, roaches, termites, and other common household pests.</div>
-                    <div class="service-price">$75 - $200</div>
+                                                <div class="service-price">₱75 - ₱200</div>
                     <div class="service-duration">
                         <i class="fas fa-clock"></i>
                         <span>1-2 hours</span>
@@ -1242,7 +1242,7 @@
                         <div class="service-content">
                             <div class="service-title">Basketball Court</div>
                             <div class="service-description">Full-size outdoor basketball court with professional hoops and lighting for evening games.</div>
-                            <div class="service-price">$25/hour</div>
+                            <div class="service-price">₱25/hour</div>
                             <div class="service-duration">
                                 <i class="fas fa-users"></i>
                                 <span>Up to 10 players</span>
@@ -1259,7 +1259,7 @@
                         <div class="service-content">
                             <div class="service-title">Community Event Hall</div>
                             <div class="service-description">Spacious air-conditioned hall perfect for parties, meetings, and community events.</div>
-                            <div class="service-price">$150/day</div>
+                            <div class="service-price">₱150/day</div>
                             <div class="service-duration">
                                 <i class="fas fa-users"></i>
                                 <span>Up to 100 guests</span>
@@ -1276,7 +1276,7 @@
                         <div class="service-content">
                             <div class="service-title">Swimming Pool</div>
                             <div class="service-description">Olympic-size swimming pool with lifeguard on duty and pool equipment available.</div>
-                            <div class="service-price">$20/hour</div>
+                            <div class="service-price">₱20/hour</div>
                             <div class="service-duration">
                                 <i class="fas fa-users"></i>
                                 <span>Up to 20 swimmers</span>
@@ -1293,7 +1293,7 @@
                         <div class="service-content">
                             <div class="service-title">Fitness Center</div>
                             <div class="service-description">Fully equipped gym with cardio machines, weights, and exercise equipment.</div>
-                            <div class="service-price">$15/hour</div>
+                            <div class="service-price">₱15/hour</div>
                             <div class="service-duration">
                                 <i class="fas fa-users"></i>
                                 <span>Up to 15 members</span>
@@ -1310,7 +1310,7 @@
                         <div class="service-content">
                             <div class="service-title">Tennis Court</div>
                             <div class="service-description">Professional tennis court with high-quality surface and net. Rackets available for rent.</div>
-                            <div class="service-price">$30/hour</div>
+                            <div class="service-price">₱30/hour</div>
                             <div class="service-duration">
                                 <i class="fas fa-users"></i>
                                 <span>2-4 players</span>
@@ -1327,7 +1327,7 @@
                         <div class="service-content">
                             <div class="service-title">Function Room</div>
                             <div class="service-description">Elegant meeting room with projector, sound system, and catering kitchen access.</div>
-                            <div class="service-price">$100/day</div>
+                            <div class="service-price">₱100/day</div>
                             <div class="service-duration">
                                 <i class="fas fa-users"></i>
                                 <span>Up to 50 guests</span>
@@ -1964,7 +1964,7 @@
                 </li>
                 <li class="mobile-nav-item">
                     <a href="services.html" class="mobile-nav-link active">
-                        <i class="fas fa-concierge-bell"></i>
+                        <i class="fa fa-calendar"></i>
                         Services
                     </a>
                 </li>
@@ -2119,7 +2119,7 @@
                         </div>
                         <div>
                             <h3 style="margin: 0; color: var(--gray-900);">${service.title}</h3>
-                            <p style="margin: 0; color: var(--gray-600);">${service.duration} • $${service.price}</p>
+                            <p style="margin: 0; color: var(--gray-600);">${service.duration} • ₱${service.price}</p>
                         </div>
                     </div>
                     <p style="color: var(--gray-600); line-height: 1.6; margin-bottom: 1.5rem;">${service.details}</p>
@@ -2140,7 +2140,7 @@
                 <div style="background: var(--gray-50); padding: 1rem; border-radius: 12px; margin-bottom: 1.5rem;">
                     <div style="display: flex; justify-content: space-between; align-items: center;">
                         <span style="font-weight: 600; color: var(--gray-900);">Service Price:</span>
-                        <span style="font-size: 1.25rem; font-weight: 700; color: var(--primary);">$${service.price}</span>
+                                                    <span style="font-size: 1.25rem; font-weight: 700; color: var(--primary);">₱${service.price}</span>
                     </div>
                 </div>
 
@@ -2307,7 +2307,7 @@
             document.getElementById('summaryService').textContent = service.title;
             document.getElementById('summaryDate').textContent = selectedDate.toLocaleDateString();
             document.getElementById('summaryTime').textContent = selectedTime;
-            document.getElementById('summaryTotal').textContent = `$${service.price}`;
+                                    document.getElementById('summaryTotal').textContent = `₱${service.price}`;
         }
 
         function selectPayment(method) {
@@ -2593,7 +2593,7 @@
                         </div>
                         <div>
                             <h3 style="margin: 0; color: var(--gray-900);">${facility.title}</h3>
-                            <p style="margin: 0; color: var(--gray-600);">${facility.capacity} • $${facility.rate}/hour</p>
+                            <p style="margin: 0; color: var(--gray-600);">${facility.capacity} • ₱${facility.rate}/hour</p>
                         </div>
                     </div>
                     <p style="color: var(--gray-600); line-height: 1.6; margin-bottom: 1.5rem;">${facility.details}</p>
@@ -2614,7 +2614,7 @@
                 <div style="background: var(--gray-50); padding: 1rem; border-radius: 12px; margin-bottom: 1.5rem;">
                     <div style="display: flex; justify-content: space-between; align-items: center;">
                         <span style="font-weight: 600; color: var(--gray-900);">Hourly Rate:</span>
-                        <span style="font-size: 1.25rem; font-weight: 700; color: var(--primary);">$${facility.rate}/hour</span>
+                                                    <span style="font-size: 1.25rem; font-weight: 700; color: var(--primary);">₱${facility.rate}/hour</span>
                     </div>
                 </div>
 
@@ -2641,7 +2641,7 @@
                     <i class="${facility.icon}"></i>
                     ${facility.title}
                 </div>
-                <div class="facility-rate">$${facility.rate}/hour</div>
+                                            <div class="facility-rate">₱${facility.rate}/hour</div>
             `;
 
             // Reset form and summary
@@ -2808,7 +2808,7 @@
                 const durationHours = durationMs / (1000 * 60 * 60);
                 
                 document.getElementById('facilitySummaryDuration').textContent = `${durationHours} hour(s)`;
-                document.getElementById('facilitySummaryTotal').textContent = `$${facility.rate * durationHours}`;
+                                        document.getElementById('facilitySummaryTotal').textContent = `₱${facility.rate * durationHours}`;
             }
         }
 
