--- a/announcements.html
+++ b/announcements.html
@@ -20,8 +20,8 @@
                 </div>
                 <div class="user-info">
                     <div class="user-details">
-                        <span class="user-name">John Doe</span>
-                        <span class="user-unit">Unit 1205</span>
+                        <span class="user-name">Heriberto Nathan</span>
+                        <span class="user-unit">Unit 802</span>
                     </div>
                     <button class="notification-btn" onclick="toggleNotifications()">
                         <i class="fas fa-bell"></i>
