--- a/dashboard.html
+++ b/dashboard.html
@@ -21,8 +21,8 @@
                 </div>
                 <div class="user-info">
                     <div class="user-details">
-                        <span class="user-name">John Doe</span>
-                        <span class="user-unit">Unit 1205</span>
+                        <span class="user-name">Heriberto Nathan</span>
+                        <span class="user-unit">Unit 802</span>
                     </div>
                     <button class="notification-btn" onclick="toggleNotifications()">
                         <i class="fas fa-bell"></i>
@@ -44,9 +44,9 @@
                                         <i class="fas fa-user"></i>
                                     </div>
                                     <div class="user-menu-details">
-                                        <span class="user-menu-name">John Doe</span>
-                                        <span class="user-menu-unit">Unit 1205</span>
-                                        <span class="user-menu-email">johndoe@email.com</span>
+                                        <span class="user-menu-name">Heriberto Nathan</span>
+                                        <span class="user-menu-unit">Unit 802</span>
+                                        <span class="user-menu-email">heriberto.nathan@email.com</span>
                                     </div>
                                 </div>
                             </div>
@@ -265,7 +265,7 @@
         <main class="main-content">
             <!-- Welcome Header -->
             <div class="page-header">
-                <h2>Welcome Back, John</h2>
+                <h2>Welcome Back, Heriberto</h2>
                 <p>Everything you need for your home is right here</p>
             </div>
 
