--- a/pending-approval.html
+++ b/pending-approval.html
@@ -326,11 +326,11 @@
                 <div class="info-grid">
                     <div class="info-item">
                         <span class="info-label">Full Name</span>
-                        <span class="info-value">John Michael Doe</span>
+                        <span class="info-value">Heriberto Nathan</span>
                     </div>
                     <div class="info-item">
                         <span class="info-label">Email</span>
-                        <span class="info-value">john.doe@email.com</span>
+                        <span class="info-value">heriberto.nathan@email.com</span>
                     </div>
                     <div class="info-item">
                         <span class="info-label">Unit Number</span>
