--- a/properties.html
+++ b/properties.html
@@ -597,8 +597,8 @@
                 </div>
                 <div class="user-info">
                     <div class="user-details">
-                        <span class="user-name">John Doe</span>
-                        <span class="user-unit">Unit 1205</span>
+                        <span class="user-name">Heriberto Nathan</span>
+                        <span class="user-unit">Unit 802</span>
                     </div>
                     <button class="notification-btn" onclick="toggleNotifications()">
                         <i class="fas fa-bell"></i>
@@ -638,7 +638,7 @@
                                             <strong>Property Update</strong>
                                         </div>
                                         <div class="notification-preview">
-                                            Your Unit 1205 maintenance request has been completed
+                                            Your Unit 802 maintenance request has been completed
                                         </div>
                                         <div class="notification-time">2 hours ago</div>
                                     </div>
@@ -829,7 +829,7 @@
                             <h4>Condominium Units</h4>
                             <p>SMDC Grace Residences</p>
                             <div class="property-details">
-                                <span>Unit 802 • Unit 1205</span>
+                                <span>Unit 802</span>
                             </div>
                         </div>
                         <div class="property-card-footer">
@@ -1000,7 +1000,7 @@
                         <i class="fas fa-key"></i>
                     </div>
                     <div class="activity-content">
-                        <div class="activity-text">Unit 1205 rental agreement updated</div>
+                        <div class="activity-text">Unit 802 rental agreement updated</div>
                         <div class="activity-date">3 days ago</div>
                     </div>
                 </div>
@@ -1038,7 +1038,7 @@
                     </div>
                     <div class="alert-content">
                         <div class="alert-title">Property Assessment Update</div>
-                        <div class="alert-text">Annual property assessment for Unit 802 and Unit 1205 are available for review in your documents section.</div>
+                        <div class="alert-text">Annual property assessment for Unit 802 is available for review in your documents section.</div>
                     </div>
                 </div>
 
