--- a/services.html
+++ b/services.html
@@ -902,8 +902,8 @@
                 </div>
                 <div class="user-info">
                     <div class="user-details">
-                        <span class="user-name">John Doe</span>
-                        <span class="user-unit">Unit 1205</span>
+                        <span class="user-name">Heriberto Nathan</span>
+                        <span class="user-unit">Unit 802</span>
                     </div>
                     <button class="notification-btn" onclick="toggleNotifications()">
                         <i class="fas fa-bell"></i>
@@ -1847,7 +1847,7 @@
                             </div>
                             <div class="form-group">
                                 <label>Cardholder Name</label>
-                                <input type="text" placeholder="John Doe" class="payment-input" id="cardName">
+                                <input type="text" placeholder="Heriberto Nathan" class="payment-input" id="cardName">
                             </div>
                         </div>
                     </div>
