--- a/signup.html
+++ b/signup.html
@@ -418,7 +418,7 @@
                             <div class="form-field">
                             <label for="firstName">First Name</label>
                             <div class="field-wrapper">
-                                <input type="text" id="firstName" name="firstName" placeholder="John" required>
+                                <input type="text" id="firstName" name="firstName" placeholder="Heriberto" required>
                                 <i class="fas fa-user field-icon"></i>
                             </div>
                         </div>
@@ -435,7 +435,7 @@
                         <div class="form-field">
                         <label for="email">Email Address</label>
                         <div class="field-wrapper">
-                            <input type="email" id="email" name="email" placeholder="john.doe@example.com" required>
+                            <input type="email" id="email" name="email" placeholder="heriberto.nathan@example.com" required>
                             <i class="fas fa-envelope field-icon"></i>
                         </div>
                         </div>
