--- a/units.html
+++ b/units.html
@@ -366,8 +366,8 @@
                 </div>
                 <div class="user-info">
                     <div class="user-details">
-                        <span class="user-name">John Doe</span>
-                        <span class="user-unit">Unit 1205</span>
+                        <span class="user-name">Heriberto Nathan</span>
+                        <span class="user-unit">Unit 802</span>
                     </div>
                     <button class="notification-btn" onclick="toggleNotifications()">
                         <i class="fas fa-bell"></i>
@@ -407,7 +407,7 @@
                                             <strong>Unit Maintenance</strong> completed
                                         </div>
                                         <div class="notification-preview">
-                                            Air conditioning repair in Unit 1205 has been completed
+                                            Air conditioning repair in Unit 802 has been completed
                                         </div>
                                         <div class="notification-time">2 hours ago</div>
                                     </div>
@@ -656,8 +656,8 @@
             <!-- Unit Card 2 - Additional Sample -->
             <div class="unit-card">
                 <div class="unit-header" style="background: linear-gradient(135deg, var(--secondary) 0%, #059669 100%);">
-                    <div class="unit-title">Unit 1205</div>
-                    <div class="unit-address">SMDC Grace Residences, Tower 1, Floor 12</div>
+                    <div class="unit-title">Unit 802</div>
+                    <div class="unit-address">SMDC Grace Residences, Tower 1, Floor 8</div>
                     <div class="unit-status">
                         <i class="fas fa-home"></i>
                         Rented
@@ -675,7 +675,7 @@
                             </h3>
                             <div class="detail-item">
                                 <span class="detail-label">Unit Name</span>
-                                <span class="detail-value">Unit 1205</span>
+                                <span class="detail-value">Unit 802</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Unit Size</span>
@@ -683,7 +683,7 @@
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Floor</span>
-                                <span class="detail-value">12</span>
+                                <span class="detail-value">8</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Building</span>
@@ -695,7 +695,7 @@
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Unit Owner</span>
-                                <span class="detail-value">John Doe</span>
+                                <span class="detail-value">Heriberto Nathan</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Status Reason</span>
@@ -727,7 +727,7 @@
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Parking Slot</span>
-                                <span class="detail-value">P-1205A</span>
+                                <span class="detail-value">P-802A</span>
                             </div>
                         </div>
 
@@ -895,7 +895,7 @@
                             <i class="fas fa-file-pdf"></i>
                         </div>
                         <div class="document-details">
-                            <div class="document-name">Title Deed - Unit 1205</div>
+                            <div class="document-name">Title Deed - Unit 802</div>
                             <div class="document-meta">PDF • 2.4 MB • Updated Jan 15, 2024</div>
                         </div>
                     </div>
