--- a/billing.html
+++ b/billing.html
@@ -201,6 +201,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="properties.html" class="nav-link">
+                        <i class="fas fa-key"></i>
+                        <span>My Properties</span>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="complaints.html" class="nav-link">
                         <i class="fas fa-tools"></i>
                         <span>Request Service</span>
