--- a/vehicles.html
+++ b/vehicles.html
@@ -615,8 +615,8 @@
                 </div>
                 <div class="user-info">
                     <div class="user-details">
-                        <span class="user-name">John Doe</span>
-                        <span class="user-unit">Unit 1205</span>
+                        <span class="user-name">Heriberto Nathan</span>
+                        <span class="user-unit">Unit 802</span>
                     </div>
                     <button class="notification-btn" onclick="toggleNotifications()">
                         <i class="fas fa-bell"></i>
@@ -848,7 +848,7 @@
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Owner</span>
-                                <span class="detail-value">John Doe</span>
+                                <span class="detail-value">Heriberto Nathan</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Assigned Lot</span>
