--- a/verify-otp.html
+++ b/verify-otp.html
@@ -358,7 +358,7 @@
                     <i class="fas fa-envelope-open-text"></i>
                 </div>
                 <h1>Verify Your Email</h1>
-                <p>We've sent a verification code to<br><span class="email-highlight">john.doe@example.com</span></p>
+                <p>We've sent a verification code to<br><span class="email-highlight">heriberto.nathan@example.com</span></p>
                 </div>
 
             <div class="auth-body">
