update peso sign

--- a/dashboard.html
+++ b/dashboard.html
@@ -282,7 +282,7 @@
             <div class="stats-grid">
                 <div class="stat-card">
                     <div class="stat-icon">
-                        <i class="fas fa-dollar-sign"></i>
+                        <i class="fa-solid fa-peso-sign"></i>
                     </div>
                     <span class="stat-value">₱1,250</span>
                     <span class="stat-label">Amount Due</span>
