--- a/facilities.html
+++ b/facilities.html
@@ -6,6 +6,7 @@
     <title>Facility Booking - MEMBRO</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <script src="data.js"></script>
     <style>
         /* Facility Page Specific Styles */
         .facilities-grid {
