--- a/login.html
+++ b/login.html
@@ -388,7 +388,7 @@
                             <input type="checkbox" name="remember">
                             Remember me
                         </label>
-                        <a href="#" class="forgot-password">Forgot password?</a>
+                        <a href="forgot-password.html" class="forgot-password">Forgot password?</a>
                     </div>
                     
                     <button type="submit" class="auth-btn">
